Fix for BUG#18025: Wrong query results because of bugs in partition pruning:  - Fix typo bug in SEL_ARG::is_singlepoint()  - In set_up_range_analysis_info(), treat MEDIUMINT as enumerable type just like other integer types

mysql-test/r/partition_pruning.result:
  Testcase for BUG#18025
mysql-test/t/partition_pruning.test:
  Testcase for BUG#18025
sql/opt_range.cc:
  BUG#18025: Fix a typo bug in SEL_ARG::is_singlepoint()
sql/sql_partition.cc:
  BUG#18025: In set_up_range_analysis_info(), treat MEDIUMINT as enumerable type just like other integer types.