sql/opt_range.cc
@@ -339,7 +339,7 @@ public:
     if (min_flag || max_flag)
       return FALSE;
     byte *min_val= (byte *)min_value;
-    byte *max_val= (byte *)min_value;
+    byte *max_val= (byte *)max_value;
 
     if (maybe_null)
     {
